🐛 Fix badge Popup border-radius overflow problem

--- a/client/src/styles/pages/badge/_badgeHome.scss
+++ b/client/src/styles/pages/badge/_badgeHome.scss
@@ -58,6 +58,7 @@
       @include column-flexbox;
       padding: 16px 16px 8px 16px;
       background-color: $blue-light;
+      border-radius: 0 0 10px 10px;
 
       .badge-popup-image-container {
         width: 180px;
